3.10.1 (#93)
* fix(3.10.1): 修复证书更新中断问题

* chore(deps): bump spring-boot-starter-parent from 3.0.3 to 3.0.4 (#68)

Bumps [spring-boot-starter-parent](https://github.com/spring-projects/spring-boot) from 3.0.3 to 3.0.4.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v3.0.3...v3.0.4)

---
updated-dependencies:
- dependency-name: org.springframework.boot:spring-boot-starter-parent
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* chore(deps): bump hutool-all from 5.8.12 to 5.8.15 (#69)

Bumps [hutool-all](https://github.com/looly/hutool) from 5.8.12 to 5.8.15.
- [Release notes](https://github.com/looly/hutool/releases)
- [Changelog](https://github.com/dromara/hutool/blob/v5-master/CHANGELOG.md)
- [Commits](https://github.com/looly/hutool/compare/5.8.12...5.8.15)

---
updated-dependencies:
- dependency-name: cn.hutool:hutool-all
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* chore(deps): bump smart-doc-maven-plugin from 2.6.5 to 2.6.6 (#70)

Bumps [smart-doc-maven-plugin](https://github.com/smart-doc-group/smart-doc-maven-plugin) from 2.6.5 to 2.6.6.
- [Release notes](https://github.com/smart-doc-group/smart-doc-maven-plugin/releases)
- [Changelog](https://github.com/smart-doc-group/smart-doc-maven-plugin/blob/master/CHANGELOG.md)
- [Commits](https://github.com/smart-doc-group/smart-doc-maven-plugin/compare/2.6.5...2.6.6)

---
updated-dependencies:
- dependency-name: com.github.shalousun:smart-doc-maven-plugin
  dependency-type: direct:production
  update-type: version-update:semver-patch